--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@modelcontextprotocol/sdk": "^1.0.3",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
+    "node-fetch": "^3.3.2",
     "zod": "^3.24.1",
     "zod-to-json-schema": "^3.24.1"
   }
