--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.4.0",
     "@typescript-eslint/parser": "8.4.0",
-    "bun-types": "^1.1.38",
     "eslint": "9.10.0",
     "eslint-plugin-unicorn": "55.0.0",
     "prettier": "^3.4.2",
@@ -38,6 +37,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.3",
+    "@types/node": "15",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.7",
     "node-fetch": "^3.3.2",
