--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "inspector": "npx @modelcontextprotocol/inspector node --enable-source-maps dist/index.js run",
     "setup": "node ./dist/index.js init",
     "logs": "tail -n 20 -f ~/Library/Logs/Claude/mcp*.log",
-    "test": "bun test",
     "fmt": "prettier --write .",
+    "test": "vitest",
     "lint": "eslint \"**/*.{js,ts,tsx}\" --quiet --fix"
   },
   "files": [
@@ -33,7 +33,8 @@
     "eslint": "9.10.0",
     "eslint-plugin-unicorn": "55.0.0",
     "prettier": "^3.4.2",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.5",
+    "vitest": "^3.1.1"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.3",
